# RoboticsStudio1

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: 41068.rviz  gazebo_bridge.yaml  nav2_params.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
launch/: 41068_ignition.launch.py  spawn_robot_with_bridge.launch.py
log/: latest_build  latest_list
models/: model.sdf
models/fox/: Untitled.stl  Zorro.mtl  fox.sdf  heythere.dae  heythere.stl  model.sdf  model_dead.sdf  perfectfox.dae  veryperfectfox.dae  veryperfectfoxcolourdae.dae
models/fox/meshes/: veryperfectfoxcolour.stl  veryperfectfoxcolourdae.dae
models/wombat/: wombat.dae  wombat.gltf  wombat.sdf  wombat.stl
scripts/: GUI.py  Naviagtion.py  box.py  foxManagerNode.py  fox_detector.py  instructions  instructions.md  naviagtion.py  projectile_launch.py  reset.sh  send_goal.py
src/41068_ignition_bringup/: CMakeLists.txt  README.md
src/41068_ignition_bringup/config/: 41068.rviz  gazebo_bridge.yaml
src/41068_ignition_bringup/launch/: 41068_ignition.launch.py
src/41068_ignition_bringup/thermal/: thermal_colour.py
src/41068_ignition_bringup/urdf/: husky.gazebo.xacro
src/41068_ignition_bringup/worlds/: large_demo.sdf
urdf/: README.md  harpoon.urdf  harpoon.urdf.xacro  husky.gazebo.xacro  husky.urdf.xacro  projectile.urdf.xacro
urdf/meshes/harpoon_arm/: Harpoonspearunalt.STL  barrel.STL  barrel_large.STL  base.STL  base_large.STL  base_medium.STL  projectile.STL
worlds/: large_demo.sdf  simple_trees.sdf
(+68 files in other folders)
